# Panoptic

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.py  change-log.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
crates/audio/panoptic-provider-linux/: Cargo.toml
crates/audio/panoptic-provider-linux/src/: lib.rs
crates/audio/panoptic-provider-linux/src/mpris/: parser.rs  provider.rs
crates/audio/panoptic-provider-web/: Cargo.toml
crates/audio/panoptic-provider-web/src/: lib.rs
crates/audio/panoptic-provider-web/src/client/: engine.rs  spotify.rs
crates/audio/panoptic-provider-web/src/schema/: bootstrapper.rs  spotify.rs
crates/audio/panoptic-provider-windows/: Cargo.toml
crates/audio/panoptic-provider-windows/src/: lib.rs
crates/audio/panoptic-provider-windows/src/smtc/: provider.rs  session.rs
crates/panoptic-cache/: Cargo.toml
crates/panoptic-cache/src/: lib.rs
crates/panoptic-core/: Cargo.toml
crates/panoptic-core/src/: lib.rs
crates/panoptic-core/src/models/: auth.rs  playback.rs
crates/panoptic-core/src/traits/: plugin.rs  provider.rs
crates/services/panoptic-server/: Cargo.toml
crates/services/panoptic-server/src/: avatar.html  lib.rs  overlay.html  pomodoro.html  stream_goals.html  twitch_alerts.html  twitch_chat.html  twitch_hype_train.html
crates/services/panoptic-server/src/handlers/: art.rs  auth.rs  health.rs  mod.rs  overlay.rs  track.rs  twitch.rs
crates/services/panoptic-server/src/router/: mod.rs
crates/ui/panoptic-gui/: index.html  package-lock.json  package.json
crates/ui/panoptic-gui/src/: App.test.tsx  App.tsx  index.css  overlay.css  setupTests.ts
crates/ui/panoptic-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/panoptic-gui/src-tauri/icons/: icon.icns
crates/ui/panoptic-gui/src-tauri/src/: lib.rs  logging.rs  main.rs  tray.rs  update.rs
crates/ui/panoptic-gui/src-tauri/src/commands/: mod.rs  overlay.rs  plugins.rs  settings.rs  stream_goals.rs
crates/ui/panoptic-gui/src-tauri/src/engine/: native.rs  orchestrator.rs  pkce.rs  plugin_registry.rs  settings.rs
crates/ui/panoptic-gui/src-tauri/src/engine/plugins/: avatar.rs  discord_rpc.rs  mpris_smtc.rs  obs_websocket.rs  pomodoro.rs  spotify.rs  stream_goals.rs  twitch.rs  twitch_notifications.rs
crates/ui/panoptic-gui/src-tauri/src/engine/plugins/twitch_notifications/: alerts.rs  bit_triggers.rs  chat.rs  event_manager.rs  hype_train.rs  mod.rs  models.rs  websocket.rs
crates/ui/panoptic-gui/src/components/: HypeTrainPreview.tsx  OverlayPreview.tsx  PlaceholderGrid.tsx  PomodoroPreview.tsx  SettingsField.tsx  Sidebar.tsx  StreamGoalsConfig.tsx  StreamGoalsPreview.tsx  TwitchAlertPlaceholderGrid.tsx  TwitchAlertPreview.tsx  TwitchChatPlaceholderGrid.tsx  TwitchChatPreview.tsx
crates/ui/panoptic-gui/src/views/: AuthView.tsx  DisplayView.tsx  IntegrationsView.tsx  OutputView.tsx  StorageView.tsx
docs/: API-Endpoints.md  Hype-Train-CSS.md  Now-Playing-CSS.md  Plugin-Development.md  Theming-Overview.md  Twitch-Alerts-CSS.md  Twitch-Chat-CSS.md
examples/now-playing/: now-playing-default.css  spinning-vinyl.css
examples/pomodoro/: pomodoro-default.css
examples/themes/: cyber_complete.css  eldritch_complete.css  rpg90s_complete.css  salem_cauldron_complete.css
examples/twitch-alerts/: twitch-alerts-default.css
examples/twitch-hype-train/: hype-train-default.css  mystic.css
pkg/arch/: PKGBUILD
