[workspace]
members = [
    "crates/ui/panoptic-gui/src-tauri",
    "crates/panoptic-core",
    "crates/audio/panoptic-provider-linux",
    "crates/audio/panoptic-provider-windows",
    "crates/audio/panoptic-provider-web",
    "crates/services/panoptic-server",
    "crates/panoptic-cache",
]
resolver = "2"

[workspace.package]
version = "0.4.6"
authors = ["jaintp <dev@jaintp.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JaINTP/Panoptic"
homepage = "https://github.com/JaINTP/Panoptic"
readme = "README.md"
description = "A modular, cross-platform streaming toolkit for overlays, data bridges, and live integrations"
keywords = ["streaming", "overlay", "tauri", "obs", "toolkit"]
categories = ["multimedia", "gui"]
