[package]
name = "panoptic-core"
description = "Shared models, traits, and types for the Panoptic media engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tauri = { version = "2", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["sync"] }

[features]
default = []
plugin = ["dep:tauri", "dep:axum"]
