[package]
name = "panoptic-provider-web"
version = "0.1.0"
edition = "2021"

[dependencies]
panoptic-core = { path = "../../panoptic-core" }
tokio = { version = "1.36", features = ["sync"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
