[package]
name = "panoptic-gui"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panoptic_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
panoptic-core = { path = "../../../panoptic-core" }
panoptic-provider-linux = { path = "../../../audio/panoptic-provider-linux" }
panoptic-provider-windows = { path = "../../../audio/panoptic-provider-windows" }
panoptic-provider-web = { path = "../../../audio/panoptic-provider-web" }
panoptic-server = { path = "../../../services/panoptic-server" }
panoptic-cache = { path = "../../../panoptic-cache" }


