[package]
name = "panoptic"
version = "0.4.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panoptic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
discord-rich-presence = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"
tracing-log = "0.2"
panoptic-core = { path = "../../../panoptic-core", features = ["plugin"] }
panoptic-provider-linux = { path = "../../../audio/panoptic-provider-linux" }
panoptic-provider-windows = { path = "../../../audio/panoptic-provider-windows" }
panoptic-provider-web = { path = "../../../audio/panoptic-provider-web" }
panoptic-server = { path = "../../../services/panoptic-server" }
panoptic-cache = { path = "../../../panoptic-cache" }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"


